# C3D

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  performance improvements.txt
engine.core/: CMakeLists.txt
engine.core/src/: colors.cpp  colors.h  defines.h  frame_data.h
engine.core/src/containers/: dynamic_array.h  hash_map.h  hash_set.h  hash_table.h  queue.h  stack.h
engine.core/src/cson/: cson_reader.cpp  cson_reader.h  cson_types.cpp  cson_types.h
engine.core/src/identifiers/: handle.h
engine.core/src/logger/: logger.h
engine.core/src/math/: c3d_math.h  hash.cpp  hash.h
engine.core/src/memory/: free_list.cpp  global_memory_system.cpp  global_memory_system.h
engine.core/src/metrics/: metrics.cpp  metrics.h  types.h
engine.core/src/platform/: file_system.cpp  file_system.h  platform.h  platform_types.h  platform_win32.cpp
engine.core/src/random/: random.cpp  random.h
engine.core/src/string/: string.h  string_utils.cpp  string_utils.h
engine.core/src/time/: scoped_timer.cpp
engine.plugins/: CMakeLists.txt
engine.plugins/audio/: CMakeLists.txt
engine.plugins/audio/open_al/: CMakeLists.txt
engine.plugins/renderer/: CMakeLists.txt
engine.plugins/renderer/vulkan/: CMakeLists.txt
engine.runtime/: CMakeLists.txt
engine.runtime/src/: application.h  application_config.cpp  application_config.h  engine.cpp  engine.h  entry.h
game.testenv/: CMakeLists.txt
game.testenv/assets/: application_config.cson
game.testenv/executable/: CMakeLists.txt
game.testenv/executable/src/: main.cpp
game.testenv/lib/: CMakeLists.txt
(+487 files in other folders)
